[gd_scene load_steps=6 format=4 uid="uid://brus7fgsm1kh7"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://bq6lqe22nmhjw" path="res://scenes/windows/window_allocator.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://pwxjbs0wbmi5" path="res://textures/icons/conveyor.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 281.0
script = ExtResource("2")
window = "distributor"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Splitter"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Splitting" parent="PanelContainer/MainContainer" index="0" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_material"
override_connector = "rhombus"
override_color = "white"
exporting = [NodePath("../Splitted"), NodePath("../Splitted2")]

[node name="RatioContainer" type="VBoxContainer" parent="PanelContainer/MainContainer" index="1"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="RatioLabelContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/RatioContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MainContainer/RatioContainer/RatioLabelContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "ratio:"

[node name="RatioLabel" type="Label" parent="PanelContainer/MainContainer/RatioContainer/RatioLabelContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5 : 5"
horizontal_alignment = 2

[node name="RatioSlider" type="HSlider" parent="PanelContainer/MainContainer/RatioContainer" index="1"]
layout_mode = 2
min_value = 0.1
max_value = 0.9
step = 0.1
value = 0.5
scrollable = false
tick_count = 5

[node name="Splitted" parent="PanelContainer/MainContainer" index="2" instance=ExtResource("5")]
layout_mode = 2

[node name="Splitted2" parent="PanelContainer/MainContainer" index="3" instance=ExtResource("5")]
layout_mode = 2

[connection signal="resource_set" from="PanelContainer/MainContainer/Splitting" to="." method="_on_splitting_resource_set"]
[connection signal="drag_ended" from="PanelContainer/MainContainer/RatioContainer/RatioSlider" to="." method="_on_ratio_slider_drag_ended"]
